# creditpulse

./: .gitignore  LICENSE  README.md  check_fairness.py  check_topics.py  config.yaml  docker-compose.yml  download_cbk.py  download_data.sh  pyproject.toml
.github/: ci.yml
creditpulse/: __init__.py
creditpulse/api/: main.py
creditpulse/causal/: __init__.py  dag.py  diff_in_diff.py  dowhy_analysis.py  regression_discontinuity.py
creditpulse/explainability/: fairness_audit.py  model_card.py
creditpulse/ingestion/: __init__.py  clean.py  simulate_mpesa.py
creditpulse/models/: train_bayesian.py
creditpulse/nlp/: explainer.py  mpesa_nlp.py  rag_chatbot.py  rag_pipeline.py  topic_model.py
data/cbk_reports/: cbk_synthetic_report.txt
docs/: index.md
models/: xgboost_metrics.json
reports/: bertopic_summary.csv  model_card.md
tests/: test_api.py  test_ingestion.py  test_models.py  test_setup.py
