[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "creditpulse"
version = "0.1.0"
description = "Causal AI credit risk assessment for East African markets"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "B-Omare" }
]
keywords = ["credit-risk", "causal-inference", "fintech", "east-africa", "mpesa"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
]

dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "matplotlib>=3.7",
  "seaborn>=0.12",
  "pydantic>=2.0",
  "pyarrow>=12.0",
]

[project.optional-dependencies]
causal = [
  "dowhy>=0.11",
  "econml>=0.14",
  "statsmodels>=0.14",
  "networkx>=3.1",
]
nlp = [
  "langchain>=0.1",
  "chromadb>=0.4",
  "transformers>=4.35",
  "bertopic>=0.16",
  "sentence-transformers>=2.2",
]
ml = [
  "xgboost>=2.0",
  "scikit-learn>=1.3",
  "pymc>=5.0",
  "scikit-survival>=0.21",
  "shap>=0.43",
  "imbalanced-learn>=0.11",
]
api = [
  "fastapi>=0.104",
  "uvicorn[standard]>=0.24",
  "streamlit>=1.28",
]
dev = [
  "pytest>=7.4",
  "pytest-cov>=4.1",
  "black>=23.0",
  "ruff>=0.1",
  "mypy>=1.6",
  "httpx>=0.25",
]
all = [
  "creditpulse[causal,nlp,ml,api,dev]",
]

[project.urls]
Homepage = "https://github.com/B-Omare/creditpulse"
Repository = "https://github.com/B-Omare/creditpulse"

[tool.black]
line-length = 88
target-version = ["py311"]

[tool.ruff]
line-length = 88
target-version = "py311"
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=creditpulse --cov-report=term-missing"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
